src/types/tests/snapshots/tgbot__types__tests__sticker__add_sticker_to_set.snap
---
source: src/types/tests/sticker.rs
expression: actual_data
---
{
  "name": "name",
  "sticker": {
    "emoji_list": [
      "😻"
    ],
    "format": "static",
    "sticker": "sticker-id"
  },
  "user_id": "1"
}
