src/types/tests/snapshots/tgbot__types__tests__sticker__create_new_sticker_set.snap
---
source: src/types/tests/sticker.rs
expression: actual_data
---
{
  "name": "name",
  "needs_repainting": "true",
  "sticker_type": "regular",
  "stickers": [
    {
      "emoji_list": [
        "😻"
      ],
      "format": "static",
      "sticker": "sticker-file-id"
    }
  ],
  "title": "title",
  "user_id": "1"
}
