src/types/tests/snapshots/tgbot__types__tests__sticker__get_custom_emoji_stickers.snap
---
source: src/types/tests/sticker.rs
expression: actual_data
---
{
  "custom_emoji_ids": [
    "emoji-id"
  ]
}
