src/types/tests/snapshots/tgbot__types__tests__sticker__input_sticker-2.snap
---
source: src/types/tests/sticker.rs
expression: actual_data
---
{
  "emoji_list": [
    "😻"
  ],
  "format": "static",
  "keywords": [
    "kw"
  ],
  "mask_position": {
    "point": "forehead",
    "scale": 3.0,
    "x_shift": 1.0,
    "y_shift": 2.0
  },
  "sticker": "https://google.com/favicon.ico"
}
