src/types/tests/snapshots/tgbot__types__tests__sticker__input_sticker-3.snap
---
source: src/types/tests/sticker.rs
expression: actual_data
---
{
  "__attachments__": [
    {
      "id": "tgbot_file_1",
      "mime_type": null,
      "name": null
    }
  ],
  "emoji_list": [
    "😻"
  ],
  "format": "static",
  "sticker": "attach://tgbot_file_1"
}
