src/types/tests/snapshots/tgbot__types__tests__sticker__input_sticker.snap
---
source: src/types/tests/sticker.rs
expression: actual_data
---
{
  "emoji_list": [
    "😻"
  ],
  "format": "static",
  "sticker": "file-id"
}
