src/types/tests/snapshots/tgbot__types__tests__sticker__mask_position.snap
---
source: src/types/tests/sticker.rs
expression: "MaskPosition::new(MaskPositionPoint::Forehead, 1.0, 0.0, 1.0)"
---
{
  "point": "forehead",
  "scale": 1.0,
  "x_shift": 0.0,
  "y_shift": 1.0
}
