src/types/tests/snapshots/tgbot__types__tests__sticker__replace_sticker_in_set.snap
---
source: src/types/tests/sticker.rs
expression: actual_data
---
{
  "name": "test",
  "old_sticker": "old-sticker",
  "sticker": {
    "emoji_list": [
      "😻"
    ],
    "format": "static",
    "sticker": "test"
  },
  "user_id": "1"
}
