src/types/tests/snapshots/tgbot__types__tests__sticker__send_sticker-2.snap
---
source: src/types/tests/sticker.rs
expression: actual_data
---
{
  "chat_id": "1",
  "sticker": "sticker-id"
}
