src/types/tests/snapshots/tgbot__types__tests__sticker__set_custom_emoji_sticker_set_thumbnail-2.snap
---
source: src/types/tests/sticker.rs
expression: actual_data
---
{
  "custom_emoji_id": "emoji-id",
  "name": "test"
}
